School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_cast/cast_IntToFloat.deca
//Utilisation d'un cast flaot sur un int
//
{
    float f = 1;
    println(f);
}
