School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_cast/cast_Int_Boolean.deca
//Test d'un cast Int sur un Boolean

{
    int a = (int)(true);
}